<resources>
    <string name="app_name">StudyDeck</string>
    <string name="flashcard_label">Definition</string>
    <string name="flashcard_content">is when a company is able to outperform its competitors by running its operations more efficiently, making better, less expensive products, and becoming more appealing to consumers</string>
    <string name="flashcard_number">10 / 10</string>
    <string name="button_back">Back</string>
    <string name="button_flip">Flip</string>
    <string name="button_next">Next</string>

    <string name="quizResult">Quiz Result</string>
    <string name="quizRestart">Try Again</string>
    <string name="quizQuit">Quit</string>
    <string name="totalScore">0</string>
    <string name="totalQuestions">1</string>

    <string name="wordJumbleHeader">Guess the Word!</string>
    <string name="previousWord">Back</string>
    <string name="nextWord">Next</string>

    <string name="Term">Term</string>
    <string name="TermIn" />
    <string name="Definition">Definition</string>
</resources>