<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="718dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Term"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etTerm"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:hint="Enter Term"
                    android:inputType="textPersonName"
                    android:text="@string/TermIn"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDefinition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Definition"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/etDefinition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter Definition"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Flashcard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/tvNoRecordsAvailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="No records available"
                android:textSize="18sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>